Added Auth0 OSS Attribution badge

--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,7 +1,9 @@
 block footer
   footer
     span.col-sm-12.text-center.text-muted &copy; #{(new Date()).getFullYear()} Sammamish Robotics
-  
+    a(width='150' height='50' href='https://auth0.com/?utm_source=oss&utm_medium=gp&utm_campaign=oss' target='_blank')
+      img(width='150' height='50' alt='JWT Auth for open source projects' src='//cdn.auth0.com/oss/badges/a0-badge-light.png')
+
   block scripts
     // jQuery
     script(type='text/javascript' src='//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js' integrity='sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=' crossorigin='anonymous')
